# lesson_35.2_practice

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: nginx.conf
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
