[tool.poetry]
name = "lesson-35-2-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lesson_35"}]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
djangorestframework = "^3.16.1"
psycopg2 = "^2.9.10"
pillow = "^11.3.0"
django-filter = "^25.1"
flake8 = "^7.3.0"
python-dotenv = "^1.1.1"
redis = "^6.4.0"
gunicorn = "^23.0.0"
django-redis = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
